Update webhook-stream-authorization.md